# vi_mentor

./: .gitignore  README.md  important.md  pyproject.toml  requirements.txt
backend/: settings.py
notes/: chatbot.py  chota_file.txt  debate_utils.py  forms.py  models.py  rag_faiss_utils.py  serializers.py  teacher_debate_utils.py  test.ipynb  test.py  test_vector_emb.ipynb  urls.py  views.py
notes/migrations/: 0002_classnote_classsection_question_quiz_student_and_more.py  0003_chatsession_chatmessage.py  0004_notification.py  0005_teacherchatsession_teacherchatmessage.py
vector_indexes/AI_&_DS/1-A/dbms/: file_hashes.txt  index.faiss  index.pkl
