[project]
name = "eternal-backend"
version = "0.1.0"
dependencies = [
    "django",
    "django-cors-headers",
    "djangorestframework",
    "docx2txt>=0.9",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.10",
    "langchain-openai>=1.1.8",
    "pypdf>=6.7.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.2",
]
